--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="row align-items-center">
           <div class="col-12 col-lg-7 text-center flex-item grid-margin" data-aos="fade-right">
-            <img src="images/LogoMain.png" alt="" class="img-fluid">
+            <img src="images/Group2.png" alt="" class="img-fluid">
           </div>
           <div class="col-12 col-lg-5 flex-item grid-margin" data-aos="fade-left">
             <h3 class="m-0">Leading the low Code<br>revolution.</h3>
